--- a/canva-collab-fe/package.json
+++ b/canva-collab-fe/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^19.0.0",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
-    "typescript-eslint": "^8.33.0"
+    "typescript-eslint": "^8.33.0",
+    "y-websocket": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
